Time display now horizontally aligned with stopwatch icon

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,13 @@
+.diff {
+    
+}
+
+.list-inline {
+    display: flex;
+    /* justify-content: space-between; */
+    text-align: justify;
+}
+
 #reddit-time-tracker {
     position: relative;
     height: 100%;
@@ -22,11 +32,10 @@
     background-repeat: no-repeat;
     background-size: contain;
     width: 30px !important;
-    height: 30px;
-    /* float: left; */
+    height: 30px;    
     display: inline-block;
     opacity: 0.5;
-    background-color: blue;
+    /* background-color: blue; */
     vertical-align: center;
 }
 
@@ -56,7 +65,7 @@
 }
 
 #reddit-time-tracker__popup-body {
-    padding: 20px 20px;
+    padding: 20px 20px;    
 }
 
 #reddit-time-tracker__stats {
@@ -72,6 +81,7 @@
     list-style-type: none;
     color: black !important;
     margin-top: 20px !important;
+    /* background-color: red; */
 }
 
 #reddit-time-tracker__stats li li {
@@ -83,9 +93,25 @@
 }
 
 #reddit-time-tracker__time {
-    display: inline-block;
+    /* display: inline-block; */
+    display: inline-flex;
+    align-items: center;
     opacity: 0.75;
-    background-color: red;
+    /* background-color: red; */
+    line-height: 18px;
+    font-size: 16px;
+    padding-top: 2px;
+    /* padding: 2px; */
     /* vertical-align: middle; */
-    text-align: center;
+    /* text-align: center; */
+}
+
+.trendGreen {    
+    /* background-image: url("chrome-extension://bbibllckhhjeebilllcglnmlaplcklld/img/greenArrow.svg") !important; */
+    color: green;
+}
+
+.trendRed {
+    /* background-image: url("chrome-extension://bbibllckhhjeebilllcglnmlaplcklld/img/redArrow.svg") !important; */
+    color: red;
 }
